// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render should render correctly 1`] = `
<Fragment>
  <Text
    items={Array []}
    onChange={[Function]}
    onSubmit={[Function]}
    value=""
  />
</Fragment>
`;

exports[`Checkbox render should render correctly placeholder 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="some placeholder"
    selections={Array []}
    toggleIcon={null}
    toggleId={null}
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={true}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections={Array []}
    toggleIcon={null}
    toggleId={null}
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default object value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections={
      Array [
        "some-value",
      ]
    }
    toggleIcon={null}
    toggleId={null}
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections={
      Array [
        "some-value",
      ]
    }
    toggleIcon={null}
    toggleId={null}
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and selected value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections={Array []}
    toggleIcon={null}
    toggleId={null}
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={true}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;
